Caught a compatability bug regarding overflow: auto; happening outside Dev mode enviroment giving scroll bar those ugly basic white scrollbars.  Fixed.

--- a/MainPage/MainCSS.css
+++ b/MainPage/MainCSS.css
@@ -29,17 +29,32 @@ body{
     background: #222035;
     width: 40px;
     position: fixed;
-    overflow: hidden;
     top: 0;
     left: 0;
     bottom: 0;
     border-top-right-radius: 1.25rem;
     border-bottom-right-radius: 1.25rem;
+    /* border: 0.2px solid black; */
     transition: ease-in-out 0.3s;
     z-index: 1;
     color: white;
-    overflow: scroll;
+    overflow: auto;
     height: 40px;
+}
+.navbar::-webkit-scrollbar {
+  width: 0.25rem;
+  background-color: #22203500;
+  border-radius: 20px;
+}
+
+.navbar::-webkit-scrollbar-thumb {
+  border-radius: 1.25rem;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+  background-color: #ffffff44;
+}
+
+.navbar::-webkit-scrollbar-thumb:hover {
+  background-color: #ffffff44;
 }
 /* @media (min-width: 2000px) {
   .navbar{
